--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@nestjs/core": "^7.6.13",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.6.13",
+    "@nestjs/platform-fastify": "^7.6.17",
+    "@nestjs/swagger": "^4.8.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "fastify-swagger": "^4.7.0",
     "mongoose": "^5.12.11",
     "passport": "^0.4.1",
     "passport-http-bearer": "^1.0.1",
@@ -40,7 +42,6 @@
     "@nestjs/cli": "^7.5.6",
     "@nestjs/schematics": "^7.2.7",
     "@nestjs/testing": "^7.6.13",
-    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/passport": "^1.0.6",
